--- a/MODUL1 SAMER/TP1WAD.html
+++ b/MODUL1 SAMER/TP1WAD.html
@@ -15,7 +15,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <u class="navbar-nav ms-auto">
+                  <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#aboutus">Tentang Kami</a>
                     </li>
@@ -137,7 +137,7 @@
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <iput type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
               </div>
               <div class="mb-3">
@@ -190,12 +190,12 @@
     <footer>
      <!-- Button trigger modal -->
      <center>
-      <button type="button" class="modal1" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <button type="button" class="modal1" data-bs-toggle="modal" data-bs-target="#exampleModaL">
           Copyright 2022 (Farid Herlangga Samer_1202204097_SI4408)
         </button>
         </center>
         <!-- Modal -->
-          <div class="modal fade" id="exampleModa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="exampleModaL" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
